@@ -1,0 +1,78 @@
+﻿using System;
+using System.Text;
+using System.Collections.Generic;
+using System.Linq;
+
+using AjTalk.Compiler;
+using AjTalk.Language;
+
+using Microsoft.VisualStudio.TestTools.UnitTesting;
+
+namespace AjTalk.Tests
+{
+    [TestClass]
+    public class EvaluateTests
+    {
+        private Machine machine;
+
+        [TestInitialize]
+        public void Setup()
+        {
+            this.machine = new Machine();
+        }
+
+        [TestMethod]
+        public void EvaluateInteger()
+        {
+            Assert.AreEqual(1, this.Evaluate("1"));
+        }
+
+        [TestMethod]
+        public void EvaluateString()
+        {
+            Assert.AreEqual("foo", this.Evaluate("'foo'"));
+        }
+
+        [TestMethod]
+        public void EvaluateBlockWithInteger()
+        {
+            Assert.AreEqual(1, this.Evaluate("[1] value"));
+        }
+
+        [TestMethod]
+        public void EvaluateGlobalVariable()
+        {
+            this.machine.SetGlobalObject("One", 1);
+            Assert.AreEqual(1, this.Evaluate("One"));
+        }
+
+        [TestMethod]
+        public void EvaluateAssignment()
+        {
+            this.Evaluate("One := 1");
+            Assert.AreEqual(1, this.machine.GetGlobalObject("One"));
+        }
+
+        [TestMethod]
+        public void EvaluateAssignmentAndGlobal()
+        {
+            Assert.AreEqual(1, this.Evaluate("One := 1. One"));
+            Assert.AreEqual(1, this.machine.GetGlobalObject("One"));
+        }
+
+        [TestMethod]
+        public void EvaluateTwoAssignments()
+        {
+            this.Evaluate("One := 1. Two := 2");
+            Assert.AreEqual(1, this.machine.GetGlobalObject("One"));
+            Assert.AreEqual(2, this.machine.GetGlobalObject("Two"));
+        }
+
+        private object Evaluate(string text)
+        {
+            Parser parser = new Parser(text);
+            Block block = parser.CompileBlock();
+            return block.Execute(this.machine, null);
+        }
+    }
+}
