@@ -69,6 +69,7 @@ Renaming Compiler to Parser
 New AjTalk.Compiler namespace
 New AjTalk.Language namespace
 New folders in tests
+First EvaluateTests
 
 Angel "Java" Lopez
 http://www.ajlopez.com/en
